--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
